<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <GVL Name="Robot_UR3" Id="{5c7a3ca3-c6c4-4a8e-a2fa-1bac6b534e08}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
//variables para enviar al robot
UR_inputs AT%Q* : UR_9_O2T_Registers;


//variables para recibir del robot
UR_outputs AT%I*:UR_5_T2O_BitRegisters;
UR_outputs_int AT%I*:UR_6_T2O_IntRegisters;
UR_outputs_float AT%I*:UR_7_T2O_FloatRegisters;

UR_TCP AT%I*:UR_4_T2O_TCP;
UR_JOINS AT%I*:UR_3_T2O_Joints;


	UR_float_out: INT;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>